# jikan

./: .clang-format  .gitignore  Makefile  README  config.h.in  flake.nix  meson.build
platform/: cross-mingw64.txt
scripts/: build.sh  buildrel.sh  debug.sh  run.sh
src/: 00_config.c  01_util.c  02_user_config.c  0_util.c  init.c  main.c  setup.c
